--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -85,4 +85,8 @@ nav:
     
     - Models:
         - Channelco: models/channelco.md
+    
+    - Models:
+        - Dlp: models/dlp.md
+        - Stream: models/stream.md
         
